--- a/android/build.gradle
+++ b/android/build.gradle
@@ -8,8 +8,37 @@ buildscript {
         kotlinVersion = "1.8.0"
     }
     repositories {
+        /**
+         * google
+         */
+        maven { url "https://maven.aliyun.com/repository/google" }
+
+        /**
+         * gradle-plugin
+         * 源地址: https://plugins.gradle.org/m2/
+         */
+        maven { url "https://maven.aliyun.com/repository/gradle-plugin" }
+
+        /**
+         * central仓和jcenter仓的聚合仓
+         * 阿里云仓库地址(老版): https://maven.aliyun.com/nexus/content/groups/public/
+         */
+        maven { url "https://maven.aliyun.com/repository/public" }
+
+        /**
+         * central
+         * 源地址: https://repo1.maven.org/maven2/
+         */
+        maven { url "https://maven.aliyun.com/repository/central" }
+
+        /**
+         * jcenter
+         */
+        maven { url "https://maven.aliyun.com/repository/jcenter" }
+
+        // 原始
         google()
-        mavenCentral()
+        // mavenCentral()
     }
     dependencies {
         classpath("com.android.tools.build:gradle")
@@ -19,3 +48,13 @@ buildscript {
 }
 
 apply plugin: "com.facebook.react.rootproject"
+
+allprojects {
+    repositories {
+        maven { url "https://maven.aliyun.com/repository/google" }
+        maven { url "https://maven.aliyun.com/repository/gradle-plugin" }
+        maven { url "https://maven.aliyun.com/repository/public" }
+        maven { url "https://maven.aliyun.com/repository/central" }
+        maven { url "https://maven.aliyun.com/repository/jcenter" }
+    }
+}
